--- a/style.css
+++ b/style.css
@@ -2,56 +2,62 @@
     font-family: cursedTimer;
     src: url(cursed-timer-ulil-font/CursedTimerUlil-Aznm.ttf);
 }
-body{
+body {
     margin: 0;
     padding: 0;
     font-family: cursedTimer;
-    background: #0c4a6e;
+    background: #09344d;
     max-width: 1200px;
 }
-.container{
+.container {
     display: flex;
     justify-content: center;
     text-align: center;
 }
 
 
-#home, #guest{
+.home, 
+.guest {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 50px;
-    
+    margin: 50px; 
 }
-button{
+
+button {
     font-family: cursedTimer;
     padding: 5px 5px;
-    border: 2px solid #e11d48;
-    color: #e11d48;
+    border: 2px solid yellowgreen;
+    color: yellowgreen;
     background: none;
     border-radius: 7px;
     margin-top: 20px;
     cursor: pointer;
 }
 
-button:hover{
+button:hover {
     color: #fb7185;
     border-color: #fb7185;
 }
-#new-game{
+
+.new-game-btn {
     display: flex;
     margin: 0 auto;
 }
+#guest-score,
+#home-score {
+    background: 2px solid transparent;
+}
 
-h2{
+h2 {
     background-color: black;
-    color: #10b981;
+    color: #42daa7;
     font-size: 4em;
     padding: 10px 33px;
-    margin: 0;
-    
+    margin: 0; 
 }
-h3{
+
+h3 {
     font-family: Arial, Helvetica, sans-serif;
     color: white;
     font-size: 2.4em;
